[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scripts/States/Multiplayer/MultiState/Buttons/multi_button_pizza.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sprites/Multiplayer/State/its_pizza.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sprites/Other/pizza.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sounds/hey.ogg" type="AudioStream" id=4]
[ext_resource path="res://Assets/Sounds/miss_note_3.ogg" type="AudioStream" id=5]

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 300, 166 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 300, 0, 300, 166 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "appear"
step = 0.0416667
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0833333, 0.166667 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, true, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.0833333, 0.166667 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.822034, 1.28652 ), Vector2( 1.183, 0.752 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "hide"
step = 0.0416667
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="AudioStreamRandomPitch" id=9]
audio_stream = ExtResource( 4 )

[node name="PizzaButton" type="Node2D"]
script = ExtResource( 1 )

[node name="Tooltip" type="AnimatedSprite" parent="."]
position = Vector2( 0, -120 )
frames = SubResource( 3 )
frame = 1
playing = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Tooltip"]
autoplay = "hide"
anims/RESET = SubResource( 4 )
anims/appear = SubResource( 5 )
anims/hide = SubResource( 6 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 1.52588e-05, 106 )
scale = Vector2( 0.266949, 0.266949 )
texture = ExtResource( 3 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = SubResource( 9 )
bus = "SFX"

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
bus = "SFX"

[connection signal="mouse_entered" from="." to="." method="_on_PizzaButton_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_PizzaButton_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_PizzaButton_pressed"]
